@@ -2,6 +2,7 @@ JEDIT TO DO
 
 2.4pre5:
 
+- NO_WORD_BREAK SPANs broken
 - do MARK_PREVIOUS before markKeyword()
 - get rid of WHITESPACE rule
 - Plugin devel manual needs more work:
@@ -9,9 +10,8 @@ JEDIT TO DO
   - document GUIUtilities.load/saveGeometry
   - how to write text area and gutter hilites
   - each section should have some sample source code
-- XMode docs
+- Finish XMode docs
 - Redo window-editor-* screenshots
-- Split: insert-char not mapped
 
 Later:
 
@@ -19,7 +19,6 @@ Later:
 
 - XMode:
   - better error reporting
-  - faster tokenizing of files
   - regexps
   - graphical mode/grammar editor
 - 'Uncomment' command that removes comment strings from selected text
